# mandelbrotx64

./: CMakeLists.txt  abstract.h  display2DTexture.sln  display2DTexture.vcxproj  display2DTexture.vcxproj.filters  glad.c  main.cpp  shader.h  window.cpp  window.h
Debug/: vc142.idb
Debug/display2DTexture.tlog/: display2DTexture.lastbuildstate
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
includes/glad/: glad.h
shaders/: basic.vert  mandelbrot.frag  primitivesRTX.frag
x64/Debug/: display2DTexture.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/display2DTexture.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  display2DTexture.lastbuildstate
x64/Release/: display2DTexture.iobj  display2DTexture.ipdb  display2DTexture.vcxproj.FileListAbsolute.txt
x64/Release/display2DTexture.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  display2DTexture.lastbuildstate  display2DTexture.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
